--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -824,7 +824,7 @@ transform: scale(1.05);
 <img src="/docs/SellTicket.png" alt="SellTicket">
 <h3>Sell a Ticket</h3>
 <p>List your IRCTC ticket for sale</p>
-<form th:action="@{/user/sell}" method="get">
+<form th:action="@{/pnr/sell}" method="get">
 <button class="button" type="submit">
 <i class="fas fa-plus-circle button-icon"></i>
 <span class="button-text">Sell</span>
