--- a/src/main/resources/templates/myListedTickets.html
+++ b/src/main/resources/templates/myListedTickets.html
@@ -296,7 +296,7 @@
         </div>
         <h3>No Tickets Listed</h3>
         <p>You haven't listed any tickets for sale yet. List your tickets to find buyers.</p>
-        <a href="/user/sell" class="action-btn" style="margin-top: 20px;">
+        <a href="/pnr/sell" class="action-btn" style="margin-top: 20px;">
             <i class="fas fa-plus-circle"></i> List a Ticket
         </a>
     </div>
